# operations_parser_kucherenko

./: Cargo.toml  LICENSE.md  Makefile  README.md
src/: expressions.txt  grammar.pest  lib.rs  main.rs
tests/: parser_tests.rs
