[package]
name = "operations_parser"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A Rust-based parser for basic math operations with function support"
authors = ["Daniil Kucherenko"]
readme = "README.md"
repository = "https://github.com/dan-kucherenko/operations_parser_kucherenko"
homepage = "https://github.com/dan-kucherenko/operations_parser_kucherenko"

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
anyhow = "1.0.91"
thiserror = "2.0.3"